Default styling for header and footer

--- a/web/themes/custom/eses/scss/_default-variables.scss
+++ b/web/themes/custom/eses/scss/_default-variables.scss
@@ -12,3 +12,5 @@
 
 // Set the proper directory for the Bootstrap Glyphicon font.
 $icon-font-path: '../bootstrap/assets/fonts/bootstrap/';
+
+$brand-primary:         rgba(91,53,144,1);
