--- a/web/themes/custom/eses/css/style.css
+++ b/web/themes/custom/eses/css/style.css
@@ -1421,11 +1421,11 @@ textarea {
 }
 
 a {
-  color: #337ab7;
+  color: #5b3590;
   text-decoration: none;
 }
 a:hover, a:focus {
-  color: #23527c;
+  color: #382058;
   text-decoration: underline;
 }
 a:focus {
@@ -1650,12 +1650,12 @@ mark,
 }
 
 .text-primary {
-  color: #337ab7;
+  color: #5b3590;
 }
 
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #286090;
+  color: #43276b;
 }
 
 .text-success {
@@ -1699,12 +1699,12 @@ a.text-danger:focus {
 }
 
 .bg-primary {
-  background-color: #337ab7;
+  background-color: #5b3590;
 }
 
 a.bg-primary:hover,
 a.bg-primary:focus {
-  background-color: #286090;
+  background-color: #43276b;
 }
 
 .bg-success {
@@ -3731,38 +3731,38 @@ a.btn.disabled, fieldset[disabled] a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: #5b3590;
+  border-color: #4f2e7d;
 }
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
-  background-color: #286090;
-  border-color: #122b40;
+  background-color: #43276b;
+  border-color: #140c20;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #286090;
-  border-color: #204d74;
+  background-color: #43276b;
+  border-color: #331e51;
 }
 .btn-primary:active, .btn-primary.active, .open > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #286090;
-  border-color: #204d74;
+  background-color: #43276b;
+  border-color: #331e51;
 }
 .btn-primary:active:hover, .btn-primary:active:focus, .btn-primary:active.focus, .btn-primary.active:hover, .btn-primary.active:focus, .btn-primary.active.focus, .open > .btn-primary.dropdown-toggle:hover, .open > .btn-primary.dropdown-toggle:focus, .open > .btn-primary.dropdown-toggle.focus {
   color: #fff;
-  background-color: #204d74;
-  border-color: #122b40;
+  background-color: #331e51;
+  border-color: #140c20;
 }
 .btn-primary:active, .btn-primary.active, .open > .btn-primary.dropdown-toggle {
   background-image: none;
 }
 .btn-primary.disabled:hover, .btn-primary.disabled:focus, .btn-primary.disabled.focus, .btn-primary[disabled]:hover, .btn-primary[disabled]:focus, .btn-primary[disabled].focus, fieldset[disabled] .btn-primary:hover, fieldset[disabled] .btn-primary:focus, fieldset[disabled] .btn-primary.focus {
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: #5b3590;
+  border-color: #4f2e7d;
 }
 .btn-primary .badge {
-  color: #337ab7;
+  color: #5b3590;
   background-color: #fff;
 }
 
@@ -3915,7 +3915,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
 }
 
 .btn-link {
-  color: #337ab7;
+  color: #5b3590;
   font-weight: normal;
   border-radius: 0;
 }
@@ -3928,7 +3928,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
   border-color: transparent;
 }
 .btn-link:hover, .btn-link:focus {
-  color: #23527c;
+  color: #382058;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -4082,7 +4082,7 @@ tbody.collapse.in {
   color: #fff;
   text-decoration: none;
   outline: 0;
-  background-color: #337ab7;
+  background-color: #5b3590;
 }
 
 .dropdown-menu > .disabled > a, .dropdown-menu > .disabled > a:hover, .dropdown-menu > .disabled > a:focus {
@@ -4525,7 +4525,7 @@ tbody.collapse.in {
 }
 .nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
   background-color: #eeeeee;
-  border-color: #337ab7;
+  border-color: #5b3590;
 }
 .nav .nav-divider {
   height: 1px;
@@ -4571,7 +4571,7 @@ tbody.collapse.in {
 }
 .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
   color: #fff;
-  background-color: #337ab7;
+  background-color: #5b3590;
 }
 
 .nav-stacked > li {
@@ -5202,7 +5202,7 @@ tbody.collapse.in {
   padding: 6px 12px;
   line-height: 1.428571429;
   text-decoration: none;
-  color: #337ab7;
+  color: #5b3590;
   background-color: #fff;
   border: 1px solid #ddd;
   margin-left: -1px;
@@ -5222,7 +5222,7 @@ tbody.collapse.in {
 .pagination > li > span:hover,
 .pagination > li > span:focus {
   z-index: 2;
-  color: #23527c;
+  color: #382058;
   background-color: #eeeeee;
   border-color: #ddd;
 }
@@ -5232,8 +5232,8 @@ tbody.collapse.in {
 .pagination > .active > span:focus {
   z-index: 3;
   color: #fff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #5b3590;
+  border-color: #5b3590;
   cursor: default;
 }
 .pagination > .disabled > span,
@@ -5362,10 +5362,10 @@ a.label:hover, a.label:focus {
 }
 
 .label-primary {
-  background-color: #337ab7;
+  background-color: #5b3590;
 }
 .label-primary[href]:hover, .label-primary[href]:focus {
-  background-color: #286090;
+  background-color: #43276b;
 }
 
 .label-success {
@@ -5422,7 +5422,7 @@ a.label:hover, a.label:focus {
   padding: 1px 5px;
 }
 .list-group-item.active > .badge, .nav-pills > .active > a > .badge {
-  color: #337ab7;
+  color: #5b3590;
   background-color: #fff;
 }
 .list-group-item > .badge {
@@ -5511,7 +5511,7 @@ a.badge:hover, a.badge:focus {
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #337ab7;
+  border-color: #5b3590;
 }
 
 .alert {
@@ -5629,7 +5629,7 @@ a.thumbnail.active {
   line-height: 20px;
   color: #fff;
   text-align: center;
-  background-color: #337ab7;
+  background-color: #5b3590;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -5805,8 +5805,8 @@ button.list-group-item {
 .list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
   z-index: 2;
   color: #fff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #5b3590;
+  border-color: #5b3590;
 }
 .list-group-item.active .list-group-item-heading,
 .list-group-item.active .list-group-item-heading > small,
@@ -5818,7 +5818,7 @@ button.list-group-item {
   color: inherit;
 }
 .list-group-item.active .list-group-item-text, .list-group-item.active:hover .list-group-item-text, .list-group-item.active:focus .list-group-item-text {
-  color: #c7ddef;
+  color: #c4afe2;
 }
 
 .list-group-item-success {
@@ -6215,22 +6215,22 @@ button.list-group-item-danger.active:focus {
 }
 
 .panel-primary {
-  border-color: #337ab7;
+  border-color: #5b3590;
 }
 .panel-primary > .panel-heading {
   color: #fff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #5b3590;
+  border-color: #5b3590;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #337ab7;
+  border-top-color: #5b3590;
 }
 .panel-primary > .panel-heading .badge {
-  color: #337ab7;
+  color: #5b3590;
   background-color: #fff;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #337ab7;
+  border-bottom-color: #5b3590;
 }
 
 .panel-success {
@@ -7384,7 +7384,7 @@ html.js .form-item .input-group-addon .glyphicon {
   transition: 150ms color, 150ms opacity;
 }
 html.js .form-item .input-group-addon .glyphicon.glyphicon-spin {
-  color: #337ab7;
+  color: #5b3590;
   opacity: 1;
 }
 html.js .form-item .input-group-addon .input-group-addon {
@@ -7438,7 +7438,7 @@ html.js .ajax-new-content:empty {
 }
 .file > span {
   background: #fff;
-  color: #337ab7;
+  color: #5b3590;
   border-bottom: 1px solid #ccc;
   border-top: 1px solid #ccc;
 }
@@ -7553,7 +7553,7 @@ table .checkbox.form-no-label, table .radio.form-no-label {
   opacity: 0;
 }
 .select-wrapper:after {
-  color: #337ab7;
+  color: #5b3590;
   content: "▼";
   font-style: normal;
   font-weight: 400;
@@ -7651,6 +7651,9 @@ body.navbar-is-fixed-bottom {
   }
 }
 
+.navbar {
+  min-height: 55px;
+}
 @media screen and (min-width: 768px) {
   .navbar.container {
     max-width: 720px;
@@ -7665,6 +7668,31 @@ body.navbar-is-fixed-bottom {
   .navbar.container {
     max-width: 1140px;
   }
+}
+.navbar .school-logo {
+  position: absolute;
+  top: 5px;
+  display: block;
+  width: 65px;
+  left: 70px;
+}
+.navbar .block-gtranslate {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  text-align: center;
+}
+.navbar .block-gtranslate select {
+  font-size: 12px;
+}
+
+.navbar-default {
+  background-color: #8052bf;
+}
+
+.navbar-toggle {
+  float: left;
+  margin-left: 15px;
 }
 
 .navbar .logo {
@@ -7753,7 +7781,7 @@ body.navbar-is-fixed-bottom {
   padding: 10px;
 }
 .tabledrag-handle:hover, .tabledrag-handle:focus {
-  color: #337ab7;
+  color: #5b3590;
 }
 
 .indentation {
@@ -7925,6 +7953,27 @@ body.toolbar-loading.toolbar {
   margin-bottom: 15px;
 }
 
+.school-logo img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.school-name {
+  padding: 0;
+  font-size: 24px;
+  display: block;
+  text-align: center;
+}
+
+.block-footer-message {
+  text-align: center;
+  font-size: 12px;
+}
+.block-footer-message p {
+  margin: 3px 0;
+}
+
 /**
  * jQuery UI autocomplete widget style overrides.
  *
@@ -7966,7 +8015,7 @@ body.toolbar-loading.toolbar {
   color: #262626;
 }
 .ui-autocomplete .ui-menu-item.ui-state-active, .ui-autocomplete .ui-menu-item.ui-state-focus {
-  background: #337ab7;
+  background: #5b3590;
   color: #fff;
 }
 
@@ -8012,3 +8061,5 @@ p:last-child,
 .help-block:first-child, .control-group .help-inline:first-child {
   margin-top: 0;
 }
+
+/*# sourceMappingURL=file:///Users/bleen/Sites/ps267.org/web/themes/custom/eses/css/style.css.map */
