Improving header and nav at larger sizes

--- a/web/themes/custom/eses/scss/_default-variables.scss
+++ b/web/themes/custom/eses/scss/_default-variables.scss
@@ -13,4 +13,8 @@
 // Set the proper directory for the Bootstrap Glyphicon font.
 $icon-font-path: '../bootstrap/assets/fonts/bootstrap/';
 
-$brand-primary:         rgba(91,53,144,1);
+// Colors
+$brand-primary: rgba(91,53,144,1);
+
+// Navbar
+$navbar-height: 55px;
