--- a/web/themes/custom/eses/css/style.css
+++ b/web/themes/custom/eses/css/style.css
@@ -4645,7 +4645,7 @@ tbody.collapse.in {
 
 .navbar {
   position: relative;
-  min-height: 50px;
+  min-height: 55px;
   margin-bottom: 20px;
   border: 1px solid transparent;
 }
@@ -4779,10 +4779,10 @@ tbody.collapse.in {
 
 .navbar-brand {
   float: left;
-  padding: 15px 15px;
+  padding: 17.5px 15px;
   font-size: 18px;
   line-height: 20px;
-  height: 50px;
+  height: 55px;
 }
 .navbar-brand:hover, .navbar-brand:focus {
   text-decoration: none;
@@ -4801,8 +4801,8 @@ tbody.collapse.in {
   float: right;
   margin-right: 15px;
   padding: 9px 10px;
-  margin-top: 8px;
-  margin-bottom: 8px;
+  margin-top: 10.5px;
+  margin-bottom: 10.5px;
   background-color: transparent;
   background-image: none;
   border: 1px solid transparent;
@@ -4827,7 +4827,7 @@ tbody.collapse.in {
 }
 
 .navbar-nav {
-  margin: 7.5px -15px;
+  margin: 8.75px -15px;
 }
 .navbar-nav > li > a {
   padding-top: 10px;
@@ -4864,8 +4864,8 @@ tbody.collapse.in {
     float: left;
   }
   .navbar-nav > li > a {
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 17.5px;
+    padding-bottom: 17.5px;
   }
 }
 
@@ -4877,8 +4877,8 @@ tbody.collapse.in {
   border-bottom: 1px solid transparent;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
-  margin-top: 8px;
-  margin-bottom: 8px;
+  margin-top: 10.5px;
+  margin-bottom: 10.5px;
 }
 @media (min-width: 768px) {
   .navbar-form .form-group {
@@ -4966,21 +4966,21 @@ tbody.collapse.in {
 }
 
 .navbar-btn {
-  margin-top: 8px;
-  margin-bottom: 8px;
+  margin-top: 10.5px;
+  margin-bottom: 10.5px;
 }
 .navbar-btn.btn-sm, .btn-group-sm > .navbar-btn.btn {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 12.5px;
+  margin-bottom: 12.5px;
 }
 .navbar-btn.btn-xs, .btn-group-xs > .navbar-btn.btn {
-  margin-top: 14px;
-  margin-bottom: 14px;
+  margin-top: 16.5px;
+  margin-bottom: 16.5px;
 }
 
 .navbar-text {
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin-top: 17.5px;
+  margin-bottom: 17.5px;
 }
 @media (min-width: 768px) {
   .navbar-text {
@@ -7629,10 +7629,10 @@ body.navbar-is-static-top {
   margin-top: 0;
 }
 body.navbar-is-fixed-top {
-  margin-top: 65px;
+  margin-top: 55px;
 }
 body.navbar-is-fixed-bottom {
-  padding-bottom: 65px;
+  padding-bottom: 70px;
 }
 @media screen and (min-width: 768px) {
   body {
@@ -7653,6 +7653,8 @@ body.navbar-is-fixed-bottom {
 
 .navbar {
   min-height: 55px;
+  border: none;
+  margin-bottom: 0;
 }
 @media screen and (min-width: 768px) {
   .navbar.container {
@@ -7669,13 +7671,6 @@ body.navbar-is-fixed-bottom {
     max-width: 1140px;
   }
 }
-.navbar .school-logo {
-  position: absolute;
-  top: 5px;
-  display: block;
-  width: 65px;
-  left: 70px;
-}
 .navbar .block-gtranslate {
   position: absolute;
   top: 5px;
@@ -7689,22 +7684,25 @@ body.navbar-is-fixed-bottom {
 .navbar-default {
   background-color: #8052bf;
 }
+@media screen and (min-width: 768px) {
+  .navbar-default .navbar-nav {
+    margin-top: 10px;
+    padding-left: 200px;
+  }
+  .navbar-default .navbar-nav > li > a {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    line-height: 15px;
+    color: white;
+  }
+  .navbar-default .navbar-nav > li > a:hover {
+    color: #CCC;
+  }
+}
 
 .navbar-toggle {
   float: left;
   margin-left: 15px;
-}
-
-.navbar .logo {
-  margin-right: -15px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-@media screen and (min-width: 768px) {
-  .navbar .logo {
-    margin-right: 0;
-    padding-left: 0;
-  }
 }
 
 /**
@@ -7953,17 +7951,48 @@ body.toolbar-loading.toolbar {
   margin-bottom: 15px;
 }
 
-.school-logo img {
+.school-logo {
+  position: absolute;
+  top: 5px;
+  display: block;
+  width: 65px;
+  left: 70px;
+}
+.school-logo > img {
   display: block;
   max-width: 100%;
   height: auto;
+  position: relative;
+  z-index: 1030;
+}
+
+@media screen and (min-width: 768px) {
+  .navbar .school-logo {
+    display: none;
+  }
+}
+
+.region-header .school-logo {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .region-header .school-logo {
+    display: block;
+    left: 0;
+    width: 180px;
+    top: -55px;
+  }
 }
 
 .school-name {
-  padding: 0;
   font-size: 24px;
   display: block;
   text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .school-name {
+    padding-left: 200px;
+  }
 }
 
 .block-footer-message {
@@ -7972,6 +8001,15 @@ body.toolbar-loading.toolbar {
 }
 .block-footer-message p {
   margin: 3px 0;
+}
+
+.region-sidebar-first {
+  margin-top: inherit;
+}
+@media screen and (min-width: 768px) {
+  .region-sidebar-first {
+    margin-top: 30px;
+  }
 }
 
 /**
