--- a/web/themes/custom/eses/scss/component/_navbar.scss
+++ b/web/themes/custom/eses/scss/component/_navbar.scss
@@ -1,11 +1,6 @@
 /**
  * Navbar styling.
  */
-$mobile:          "screen and (max-width: #{$screen-xs-max})";
-$tablet:          "screen and (min-width: #{$screen-sm-min})";
-$normal:          "screen and (min-width: #{$screen-md-min})";
-$wide:            "screen and (min-width: #{$screen-lg-min})";
-$grid-breakpoint: "screen and (min-width: #{$grid-float-breakpoint})";
 
 body {
   // Fix horizontal scrolling on iOS devices.
@@ -16,7 +11,7 @@ body {
     margin-top: 0;
   }
   &.navbar-is-fixed-top {
-    margin-top: ($navbar-height + ($grid-gutter-width / 2));
+    margin-top: $navbar-height;
   }
   &.navbar-is-fixed-bottom {
     padding-bottom: ($navbar-height + ($grid-gutter-width / 2));
@@ -46,7 +41,9 @@ body {
 }
 
 .navbar {
-  min-height: $navbar-height + 5;
+  min-height: $navbar-height;
+  border: none;
+  margin-bottom: 0;
 
   &.container {
     @media #{$tablet} {
@@ -60,14 +57,6 @@ body {
     }
   }
 
-  & .school-logo {
-    position: absolute;
-    top: $padding-small-vertical;
-    display: block;
-    width: 65px;
-    left: 70px;
-  }
-
   // Language
   & .block-gtranslate {
     position: absolute;
@@ -79,10 +68,29 @@ body {
       font-size: $font-size-base - 2;
     }
   }
+
 }
+
 
 .navbar-default {
   background-color: lighten($brand-primary, 15%);
+
+  .navbar-nav {
+    @media #{$tablet} {
+      margin-top: 10px;
+      padding-left: 200px;
+
+      > li > a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+        line-height: $line-height-computed - 5;
+        color: white;
+      }
+      > li > a:hover {
+        color: #CCC;
+      }
+    }
+  }
 }
 
 // Navbar toggle
@@ -95,13 +103,3 @@ body {
   margin-left: $navbar-padding-horizontal;
 }
 
-// Branding.
-.navbar .logo {
-  margin-right: -($grid-gutter-width / 2);
-  padding-left: ($grid-gutter-width / 2);
-  padding-right: ($grid-gutter-width / 2);
-  @media #{$grid-breakpoint} {
-    margin-right: 0;
-    padding-left: 0;
-  }
-}
