--- a/web/themes/custom/eses/css/style.css
+++ b/web/themes/custom/eses/css/style.css
@@ -7657,6 +7657,15 @@ body.navbar-is-fixed-bottom {
   margin-bottom: 0;
 }
 @media screen and (min-width: 768px) {
+  .navbar {
+    background-color: #8052bf;
+  }
+}
+.navbar .navbar-collapse {
+  background-color: transparent;
+  border: none;
+}
+@media screen and (min-width: 768px) {
   .navbar.container {
     max-width: 720px;
   }
@@ -7681,13 +7690,14 @@ body.navbar-is-fixed-bottom {
   font-size: 12px;
 }
 
-.navbar-default {
+.navbar-default .navbar-header {
   background-color: #8052bf;
 }
 @media screen and (min-width: 768px) {
   .navbar-default .navbar-nav {
     margin-top: 10px;
     padding-left: 200px;
+    background-color: transparent;
   }
   .navbar-default .navbar-nav > li > a {
     padding-top: 10px;
@@ -7695,8 +7705,21 @@ body.navbar-is-fixed-bottom {
     line-height: 15px;
     color: white;
   }
+}
+@media screen and (max-width: 767px) {
+  .navbar-default .navbar-nav {
+    background-color: #EEE;
+    box-shadow: 0px 10px 15px -10px rgba(0, 0, 0, 0.75);
+    margin-top: 0;
+  }
+  .navbar-default .navbar-nav > li > a {
+    border-bottom: 1px solid #ccc;
+  }
+  .navbar-default .navbar-nav > li:last-child > a {
+    border-bottom: none;
+  }
   .navbar-default .navbar-nav > li > a:hover {
-    color: #CCC;
+    background-color: #CCC;
   }
 }
 
