--- a/web/themes/custom/eses/scss/component/_navbar.scss
+++ b/web/themes/custom/eses/scss/component/_navbar.scss
@@ -45,6 +45,15 @@ body {
   border: none;
   margin-bottom: 0;
 
+  @media #{$tablet} {
+    background-color: lighten($brand-primary, 15%);
+  }
+
+  & .navbar-collapse {
+    background-color: transparent;
+    border: none;
+  }
+
   &.container {
     @media #{$tablet} {
       max-width: (($container-sm - $grid-gutter-width));
@@ -73,12 +82,15 @@ body {
 
 
 .navbar-default {
-  background-color: lighten($brand-primary, 15%);
 
+  .navbar-header {
+    background-color: lighten($brand-primary, 15%);
+  }
   .navbar-nav {
     @media #{$tablet} {
       margin-top: 10px;
       padding-left: 200px;
+      background-color: transparent;
 
       > li > a {
         padding-top: 10px;
@@ -86,8 +98,20 @@ body {
         line-height: $line-height-computed - 5;
         color: white;
       }
+    }
+    @media #{$mobile} {
+      background-color: #EEE;
+      box-shadow: 0px 10px 15px -10px rgba(0,0,0,0.75);
+      margin-top: 0;
+      
+      > li > a {
+        border-bottom: 1px solid #ccc;
+      }
+      > li:last-child > a {
+        border-bottom: none;
+      }
       > li > a:hover {
-        color: #CCC;
+        background-color: #CCC;
       }
     }
   }
