--- a/web/themes/custom/eses/scss/component/_eses.scss
+++ b/web/themes/custom/eses/scss/component/_eses.scss
@@ -11,30 +11,45 @@
     position: relative;
     z-index: 1030; // Do not change; This is the only value that works with both Admin Toolbar and Bootstrap collapsible menu
   }
-}
-.navbar .school-logo {
+
   @media #{$tablet} {
     display: none;
   }
 }
-.region-header .school-logo {
-  display: none;
-
-  @media #{$tablet} {
-    display: block;
-    left: 0;
-    width: 180px;
-    top: -1 * $navbar-height;
-  }
-}
-
 .school-name {
-  @media #{$tablet} {
-    padding-left: 200px;
-  }
   font-size: 24px;
   display: block;
   text-align: center;
+}
+
+.region-header {
+  max-width: none;
+
+  @media #{$tablet} {
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 0) 100%);
+    position: fixed;
+    z-index: 1030;
+    min-height: 60px;
+    margin-left: -15px;
+    width: (($container-sm - $grid-gutter-width));
+  }
+  @media #{$normal} {
+    width: (($container-md - $grid-gutter-width));
+  }
+  @media #{$wide} {
+    width: (($container-lg - $grid-gutter-width));
+  }
+
+  .school-logo {
+    display: none;
+
+    @media #{$tablet} {
+      display: block;
+      left: 0;
+      width: 180px;
+      top: -1 * $navbar-height;
+    }
+  }
 }
 
 .block-footer-message {
