--- a/web/themes/custom/eses/scss/component/_eses.scss
+++ b/web/themes/custom/eses/scss/component/_eses.scss
@@ -52,6 +52,12 @@
   }
 }
 
+.region-content {
+  @media #{$tablet} {
+    padding-top: 60px;
+  }
+}
+
 .block-footer-message {
   text-align: center;
   font-size: $font-size-small;
