Initial styling of the sidebar

--- a/web/themes/custom/eses/scss/component/_calendar.scss
+++ b/web/themes/custom/eses/scss/component/_calendar.scss
@@ -32,6 +32,7 @@ $calendar_shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
         .day {
           display: block;
           font-size: 1.5em;
+          background: #fff;
         }
       }
 
