--- a/web/themes/custom/eses/css/style.css
+++ b/web/themes/custom/eses/css/style.css
@@ -7361,10 +7361,6 @@ td.visible-print {
   color: #843534;
 }
 
-.site-alert {
-  margin-top: 70px;
-}
-
 /**
  * AJAX (throbber) styling.
  */
@@ -7994,6 +7990,12 @@ body.toolbar-loading.toolbar {
 
 .main-container {
   padding-top: 1em;
+  min-height: 350px;
+}
+@media screen and (min-width: 768px) {
+  .main-container {
+    padding-top: 50px;
+  }
 }
 
 .school-name {
@@ -8054,12 +8056,25 @@ body.toolbar-loading.toolbar {
   display: none;
 }
 @media screen and (min-width: 768px) {
+  .region-sub-header {
+    position: fixed;
+    z-index: 1030;
+    width: 100%;
+    min-height: 70px;
+    background: linear-gradient(to bottom, white 0%, white 75%, rgba(255, 255, 255, 0) 100%);
+  }
   .region-sub-header .school-logo {
     position: absolute;
     top: -50px;
     left: 10px;
     display: block;
     width: 180px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .region-content {
+    padding-right: 42px;
   }
 }
 
@@ -8072,11 +8087,101 @@ body.toolbar-loading.toolbar {
 }
 
 .region-sidebar-first {
-  margin-top: inherit;
+  margin-top: 0;
+  position: absolute;
+  width: 275px;
+  right: -290px;
 }
 @media screen and (min-width: 768px) {
   .region-sidebar-first {
-    margin-top: 30px;
+    position: static;
+    width: auto;
+    right: unset;
+  }
+}
+.region-sidebar-first section {
+  border: 1px solid #999;
+  padding: 10px;
+  background: #eee;
+  width: 100%;
+}
+.region-sidebar-first section.open {
+  left: -274px;
+}
+.region-sidebar-first section#block-mini-calendar {
+  top: 0px;
+  z-index: 10;
+}
+.region-sidebar-first section#block-mini-calendar::before {
+  background-image: url(../images/icon_calendar.png);
+}
+.region-sidebar-first section#block-views-block-resources-resources-block {
+  top: 74px;
+  z-index: 5;
+}
+.region-sidebar-first section#block-views-block-resources-resources-block::before {
+  background-image: url(../images/icon_resources.png);
+}
+.region-sidebar-first section .block-title {
+  margin-top: 0;
+  font-size: 1.25em;
+}
+@media screen and (min-width: 768px) {
+  .region-sidebar-first section {
+    margin-bottom: 1em;
+  }
+  .region-sidebar-first section.open {
+    left: 0;
+  }
+  .region-sidebar-first section#block-mini-calendar {
+    top: 0;
+  }
+  .region-sidebar-first section#block-views-block-resources-resources-block {
+    top: 0;
+  }
+  .region-sidebar-first section .block-title {
+    font-size: 1.15em;
+  }
+}
+.region-sidebar-first section:before, .region-sidebar-first section:after {
+  content: " ";
+  display: table;
+}
+.region-sidebar-first section:after {
+  clear: both;
+}
+@media screen and (max-width: 767px) {
+  .region-sidebar-first section {
+    position: absolute;
+    left: 0;
+    z-index: 1;
+    margin-bottom: 1em;
+    border-bottom-left-radius: 0.25em;
+    box-shadow: 0px 7px 7px -5px rgba(0, 0, 0, 0.75);
+    transition: left 300ms ease-out;
+  }
+  .region-sidebar-first section::before {
+    display: block;
+    position: absolute;
+    top: -1px;
+    left: -64px;
+    width: 64px;
+    height: 64px;
+    border: 1px solid #999;
+    border-right: none;
+    border-top-left-radius: 0.25em;
+    border-bottom-left-radius: 0.25em;
+    background: scroll no-repeat center center #eee;
+    background-clip: border-box;
+    background-size: 54px 54px;
+    cursor: pointer;
+    box-shadow: 0px 7px 7px -5px rgba(0, 0, 0, 0.75);
+  }
+}
+@media screen and (min-width: 768px) {
+  .region-sidebar-first {
+    margin-top: 25px;
+    position: relative;
   }
 }
 
@@ -8116,6 +8221,7 @@ body.toolbar-loading.toolbar {
 .mini-calendar .events .event .date .day {
   display: block;
   font-size: 1.5em;
+  background: #fff;
 }
 .mini-calendar .events .event:last-of-type {
   border-bottom: none;
