--- a/web/themes/custom/eses/scss/component/_asides.scss
+++ b/web/themes/custom/eses/scss/component/_asides.scss
@@ -1,7 +1,113 @@
+$sidebar-width: 275px;
+
+$sidebar-tab-size: 64px;
+$sidebar-tab-shadow: 0px 7px 7px -5px rgba(0,0,0,0.75);
+
 .region-sidebar-first {
-  margin-top: inherit;
+  margin-top: 0;
+  position: absolute;
+  width: $sidebar-width;
+  right: -290px;
 
   @media #{$tablet} {
-    margin-top: 30px;
+    position: static;
+    width: auto;
+    right: unset;
+  }
+
+  section {
+    border: 1px solid #999;
+    padding: 10px;
+    background: #eee;
+    width: 100%;
+
+    &.open {
+      left: 1 - $sidebar-width;
+    }
+
+    &#block-mini-calendar {
+      &::before {
+        background-image: url(../images/icon_calendar.png);
+      }
+      top: 0 * ($sidebar-tab-size + 10px);
+      z-index: 10;
+    }
+    &#block-views-block-resources-resources-block {
+      &::before {
+        background-image: url(../images/icon_resources.png);
+      }
+      top: 1 * ($sidebar-tab-size + 10px);
+      z-index: 5;
+    }
+
+    .block-title {
+      margin-top: 0;
+      font-size: 1.25em;
+    }
+
+    @media #{$tablet} {
+      margin-bottom: 1em;
+
+      &.open {
+        left: 0;
+      }
+
+      &#block-mini-calendar {
+        top: 0;
+      }
+      &#block-views-block-resources-resources-block {
+        top: 0;
+      }
+
+      .block-title {
+        font-size: 1.15em;
+      }
+    }
+
+    @include clearfix;
+  }
+
+  @media #{$mobile} {
+    section {
+      position: absolute;
+      left: 0;
+      z-index: 1;
+      margin-bottom: 1em;
+      border-bottom-left-radius: .25em;
+      box-shadow: $sidebar-tab-shadow;
+      transition: left 300ms ease-out;
+    }
+
+    section::before {
+      display: block;
+      position: absolute;
+      top: -1px;
+      left: -1 * $sidebar-tab-size;
+      width: $sidebar-tab-size;
+      height: $sidebar-tab-size;
+      border: 1px solid #999;
+      border-right: none;
+      border-top-left-radius: .25em;
+      border-bottom-left-radius: .25em;
+      background: scroll no-repeat center center #eee;
+      background-clip: border-box;
+      background-size: $sidebar-tab-size - 10px $sidebar-tab-size - 10px;
+      cursor: pointer;
+      box-shadow: $sidebar-tab-shadow;
+    }
+  }
+  //section:after {
+  //  border-bottom-left-radius: -.25em;
+  //  border: 1px solid #999;
+  //  border-right: none;
+  //  background: #fff;
+  //  display: block;
+  //  width: .25em;
+  //  height: .25em;
+  //}
+
+  @media #{$tablet} {
+    margin-top: 25px;
+    position: relative;
   }
 }
