--- a/web/themes/custom/eses/scss/_default-variables.scss
+++ b/web/themes/custom/eses/scss/_default-variables.scss
@@ -10,6 +10,9 @@
  * ./THEMENAME/bootstrap/assets/stylesheets/bootstrap/_variables.scss
  */
 
+// Fonts
+$font-family-headers: 'Boogaloo', Helvetica, Arial, sans-serif;
+
 // Set the proper directory for the Bootstrap Glyphicon font.
 $icon-font-path: '../bootstrap/assets/fonts/bootstrap/';
 
