--- a/web/themes/custom/eses/scss/component/_eses.scss
+++ b/web/themes/custom/eses/scss/component/_eses.scss
@@ -1,3 +1,8 @@
+// All Pages
+h1, h2, h3, h4, h5, .block-title {
+  font-family: $font-family-headers;
+}
+
 // Homepage.
 .path-frontpage {
   h1 {
@@ -18,6 +23,7 @@
 
 // Branding.
 .school-name {
+  font-family: $font-family-headers;
   font-size: 24px;
   display: block;
   text-align: center;
