--- a/web/themes/custom/eses/scss/component/_asides.scss
+++ b/web/themes/custom/eses/scss/component/_asides.scss
@@ -5,9 +5,10 @@ $sidebar-tab-shadow: 0px 7px 7px -5px rgba(0,0,0,0.75);
 
 .region-sidebar-first {
   margin-top: 0;
-  position: absolute;
+  position: fixed;
+  z-index: 1;
   width: $sidebar-width;
-  right: -290px;
+  right: -1 * $sidebar-width;
 
   @media #{$tablet} {
     position: static;
@@ -45,6 +46,17 @@ $sidebar-tab-shadow: 0px 7px 7px -5px rgba(0,0,0,0.75);
       font-size: 1.25em;
     }
 
+    .resource-list {
+      list-style-type: none;
+      padding-left: 1.5em;
+      text-indent: -1.25em;
+      margin-left: 0.5em;
+
+      svg {
+        min-width: 1em;
+      }
+    }
+
     @media #{$tablet} {
       margin-bottom: 1em;
 
@@ -57,10 +69,6 @@ $sidebar-tab-shadow: 0px 7px 7px -5px rgba(0,0,0,0.75);
       }
       &#block-views-block-resources-resources-block {
         top: 0;
-      }
-
-      .block-title {
-        font-size: 1.15em;
       }
     }
 
