--- a/web/themes/custom/eses/scss/component/_eses.scss
+++ b/web/themes/custom/eses/scss/component/_eses.scss
@@ -19,6 +19,9 @@ h1, h2, h3, h4, h5, .block-title {
   @media #{$tablet} {
     padding-top: 70px;
   }
+  @media #{$wide} {
+    padding-top: 90px;
+  }
 }
 
 // Branding.
