--- a/web/themes/custom/eses/css/style.css
+++ b/web/themes/custom/eses/css/style.css
@@ -7996,6 +7996,11 @@ h1, h2, h3, h4, h5, .block-title {
   font-family: "Boogaloo", Helvetica, Arial, sans-serif;
 }
 
+.block-title {
+  margin-top: 0;
+  font-size: 1.25em;
+}
+
 .path-frontpage h1 {
   border: none;
   margin: 0;
@@ -8151,9 +8156,9 @@ h1, h2, h3, h4, h5, .block-title {
   }
 }
 .region-sidebar-first section {
-  border: 1px solid #999;
+  border: 1px solid #e3e3e3;
   padding: 10px;
-  background: #eee;
+  background: #f5f5f5;
   width: 100%;
 }
 .region-sidebar-first section.open {
@@ -8172,10 +8177,6 @@ h1, h2, h3, h4, h5, .block-title {
 }
 .region-sidebar-first section#block-views-block-resources-resources-block::before {
   background-image: url(../images/icon_resources.png);
-}
-.region-sidebar-first section .block-title {
-  margin-top: 0;
-  font-size: 1.25em;
 }
 .region-sidebar-first section .resource-list {
   list-style-type: none;
@@ -8213,7 +8214,7 @@ h1, h2, h3, h4, h5, .block-title {
     left: 0;
     z-index: 1;
     margin-bottom: 1em;
-    border-bottom-left-radius: 0.25em;
+    border-bottom-left-radius: 4px;
     box-shadow: 0px 7px 7px -5px rgba(0, 0, 0, 0.75);
     transition: left 300ms ease-out;
   }
@@ -8224,11 +8225,11 @@ h1, h2, h3, h4, h5, .block-title {
     left: -64px;
     width: 64px;
     height: 64px;
-    border: 1px solid #999;
+    border: 1px solid #e3e3e3;
     border-right: none;
-    border-top-left-radius: 0.25em;
-    border-bottom-left-radius: 0.25em;
-    background: scroll no-repeat center center #eee;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    background: scroll no-repeat center center #f5f5f5;
     background-clip: border-box;
     background-size: 54px 54px;
     cursor: pointer;
@@ -8349,6 +8350,22 @@ h1, h2, h3, h4, h5, .block-title {
 .node--type-announcement.node--view-mode-teaser .field--name-node-link {
   margin: 0.5em 0;
   font-size: 0.9em;
+}
+
+.view-fundraisers .fundraiser {
+  margin-bottom: 1em;
+  border-bottom: 1px dotted #ccc;
+  padding-bottom: 0.5em;
+}
+.view-fundraisers .fundraiser .field--name-node-link {
+  margin-top: 0.25em;
+  font-size: 0.9em;
+}
+.view-fundraisers .fundraiser .field--name-node-title {
+  display: none;
+}
+.view-fundraisers .fundraiser .field--name-node-title h2 {
+  margin-top: 0;
 }
 
 /**
