--- a/web/themes/custom/eses/scss/component/_asides.scss
+++ b/web/themes/custom/eses/scss/component/_asides.scss
@@ -22,9 +22,9 @@ $sidebar-tab-shadow: 0px 7px 7px -5px rgba(0,0,0,0.75);
   }
 
   section {
-    border: 1px solid #999;
+    border: 1px solid #e3e3e3;
     padding: 10px;
-    background: #eee;
+    background: #f5f5f5;
     width: 100%;
 
     &.open {
@@ -44,11 +44,6 @@ $sidebar-tab-shadow: 0px 7px 7px -5px rgba(0,0,0,0.75);
       }
       top: 1 * ($sidebar-tab-size + 10px);
       z-index: 5;
-    }
-
-    .block-title {
-      margin-top: 0;
-      font-size: 1.25em;
     }
 
     .resource-list {
@@ -86,7 +81,7 @@ $sidebar-tab-shadow: 0px 7px 7px -5px rgba(0,0,0,0.75);
       left: 0;
       z-index: 1;
       margin-bottom: 1em;
-      border-bottom-left-radius: .25em;
+      border-bottom-left-radius: 4px;
       box-shadow: $sidebar-tab-shadow;
       transition: left 300ms ease-out;
     }
@@ -98,11 +93,11 @@ $sidebar-tab-shadow: 0px 7px 7px -5px rgba(0,0,0,0.75);
       left: -1 * $sidebar-tab-size;
       width: $sidebar-tab-size;
       height: $sidebar-tab-size;
-      border: 1px solid #999;
+      border: 1px solid #e3e3e3;
       border-right: none;
-      border-top-left-radius: .25em;
-      border-bottom-left-radius: .25em;
-      background: scroll no-repeat center center #eee;
+      border-top-left-radius: 4px;
+      border-bottom-left-radius: 4px;
+      background: scroll no-repeat center center #f5f5f5;
       background-clip: border-box;
       background-size: $sidebar-tab-size - 10px $sidebar-tab-size - 10px;
       cursor: pointer;
