--- a/web/themes/custom/eses/templates/page.html.twig
+++ b/web/themes/custom/eses/templates/page.html.twig
@@ -156,7 +156,7 @@
     {# Sidebar Second #}
     {% if page.sidebar_second %}
     {% block sidebar_second %}
-      <aside class="col-sm-3" role="complementary">
+      <aside class="col-sm-3 extras-rail" role="complementary">
         {{ page.sidebar_second }}
       </aside>
     {% endblock %}
