--- a/web/themes/custom/eses/scss/component/_form.scss
+++ b/web/themes/custom/eses/scss/component/_form.scss
@@ -92,7 +92,7 @@
 // Form action buttons.
 .form-actions {
   .btn, .btn-group {
-    margin-right: 10px;
+    margin: 10px;
   }
   .btn-group {
     .btn {
