--- a/web/themes/custom/eses/scss/_overrides.scss
+++ b/web/themes/custom/eses/scss/_overrides.scss
@@ -26,7 +26,7 @@ $grid-breakpoint: "screen and (min-width: #{$grid-float-breakpoint})";
 @import "component/asides";
 @import "component/calendar";
 @import "component/announcements";
-@import "component/eventfundraiser";
+@import "component/fundraiser";
 @import "component/paragraphs";
 
 // jQuery UI style overrides.
