--- a/web/themes/custom/eses/css/style.css
+++ b/web/themes/custom/eses/css/style.css
@@ -8353,7 +8353,7 @@ h1, h2, h3, h4, h5, .block-title {
 .node--type-announcement.node--view-mode-teaser img {
   float: left;
   margin: 0 1em 0.5em 0;
-  box-shadow: 3px 3px 7px 1px #565656;
+  box-shadow: 3px 3px 10px 1px #bbb;
 }
 .node--type-announcement.node--view-mode-teaser .field--name-node-link {
   margin: 0.5em 0;
