--- a/web/themes/custom/eses/scss/component/_announcements.scss
+++ b/web/themes/custom/eses/scss/component/_announcements.scss
@@ -12,7 +12,7 @@
     img {
       float: left;
       margin: 0 1em .5em 0;
-      box-shadow: 3px 3px 7px 1px #565656;
+      box-shadow: 3px 3px 10px 1px #bbb;
     }
 
     .field--name-node-link {
