--- a/web/themes/custom/eses/scss/component/_calendar.scss
+++ b/web/themes/custom/eses/scss/component/_calendar.scss
@@ -4,6 +4,8 @@ $calendar_shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
   .events {
     list-style-type: none;
     padding: 0;
+    max-height: 200px;
+    overflow: scroll;
 
     .event {
       @include clearfix;
@@ -90,6 +92,10 @@ $calendar_shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
       &:last-of-type {
         border-bottom: none;
       }
+    }
+
+    @media #{$tablet} {
+      max-height: none;
     }
   }
 }
